--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <navbar>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,7 +22,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </navbar>
+        </nav>
     </header>
     <section class="hero" ></section>
     <main class="content">
@@ -71,12 +71,12 @@
             </p>
         </section>
     </aside>
-    <div class="footer">
+    <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
