adds commetmes the head section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- HTML: its the root of the document, contains the lang element -->
 <head>
+<!-- HEAD: head information, or metadata, that helps the browser to render the page correctly. Elements included within the <head> are not visible when a user looks at a webpage -->
     <meta charset="UTF-8" />
+ <!-- META: contains information about the page that is used by the browser, defines metadata such as the character set, description, keywords, author, and viewport. -->
+<!-- * charset: specifies the character encoding for the HTML document -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+<!-- TITLE: defines the title for a webpage -->
+    <title>Horiseon For Marketing </title>
 </head>
 
 <body>
@@ -58,7 +62,7 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png"  />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
