--- a/index.html
+++ b/index.html
@@ -39,3 +39,100 @@
     </header>
   </body>
 </html>
+<!-- MAIN: represents the dominant content of the <body> of a document. The content inside the <main> element should be unique to the documen -->
+  <main>
+    <!-- DIV: division or a section-->
+    <!-- ~ The header background image assigned in this section -->
+    <div class="header-image"></div>
+
+    <!-- SECTION: generic standalone section of a document, should always have a heading inside. -->
+    <!-- ~ The content is assigned in this section -->
+    <section id="content">
+      <div id="search-engine-optimization">
+        <!-- IMG: embeds an image into the document-->
+        <!-- * alt: Specifies an alternate text for the image, if the image for some reason cannot be displayed -->
+        <!-- * src: Specifies the path to the image -->
+        <img
+          alt="SEO Notebook"
+          src="./assets/images/search-engine-optimization.jpg"
+          class="float-left"
+        />
+        <h2>Search Engine Optimization</h2>
+        <!-- P: represents a paragraph -->
+        <p>
+          The dominance of mobile internet use means that users are searching
+          for the right business as they travel, shop, or sit on their couch
+          at home. Search Engine Optimization (SEO) allows you to increase
+          your visibility and find the right customers for your business.
+        </p>
+      </div>
+      <div id="online-reputation-management">
+        <img
+          alt="Online Reputation Management Macbook"
+          src="./assets/images/online-reputation-management.jpg"
+          class="float-right"
+        />
+        <h2>Online Reputation Management</h2>
+        <p>
+          The web is full of opinions, and some of these can be negative.
+          Social media allows anyone with an internet connection to say
+          whatever they want about your business. Online Reputation Management
+          gives you the control over what potential customers see when they
+          search for your business.
+        </p>
+      </div>
+      <div id="social-media-marketing">
+        <img
+          alt="Social Media Marketing Group"
+          src="./assets/images/social-media-marketing.jpg"
+          class="float-left"
+        />
+        <h2>Social Media Marketing</h2>
+        <p>
+          Social media continues to have a sizable influence on buying habits.
+          Social media marketing helps you determine which platforms are
+          suited to your brand, using analytics to find the right markets and
+          increase your lead generation.
+        </p>
+      </div>
+    </section>
+    <!-- The benefits are assigned in this section -->
+    <section id="benefits">
+      <!-- 1st benefit is assigned in this div -->
+      <div>
+        <h3>Lead Generation</h3>
+        <img
+          alt="Lead Generation Icon"
+          src="./assets/images/lead-generation.png"
+        />
+        <p>
+          Inbound strategies for lead generation require less work for your
+          business, bringing customers directly to your website.
+        </p>
+      </div>
+      <!-- 2nd benefit is assigned in this div -->
+      <div>
+        <h3>Brand Awareness</h3>
+        <img
+          alt="Brand Awareness Icon"
+          src="./assets/images/brand-awareness.png"
+        />
+        <p>
+          Users find your business through paid and organic searches,
+          increasing the search ranking and visibility for your business.
+        </p>
+      </div>
+      <!-- 3rd benefit is assigned in this div -->
+      <div>
+        <h3>Cost Management</h3>
+        <img
+          alt="Cost Management Icon"
+          src="./assets/images/cost-management.png"
+        />
+        <p>
+          As the search ranking for your business increases, your advertising
+          costs decrease, and you no longer need to advertise your page.
+        </p>
+      </div>
+    </section>
+  </main>
