adds the fotter section with comments

--- a/index.html
+++ b/index.html
@@ -136,3 +136,10 @@
       </div>
     </section>
   </main>
+<!-- FOOTER: contains the author, copyright, contact, sitemap, and navigation  -->
+<footer>
+  <h2>Made with ❤️️ by Horiseon</h2>
+  <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
+</footer>
+</body>
+</html>
